--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1349,26 +1349,26 @@ SynthBenchmark.LastCompileMethod=Unknown
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem1=/Game/ThirdPerson/Maps/Main
-MRUItem2=/Game/ThirdPerson/Maps/Level_Tester
-MRUItem3=/Game/ThirdPerson/Blueprints/Equipamiento/Equimamiento
-MRUItem4=/Game/ThirdPerson/Blueprints/Equipamiento/DataBase_Armas
-MRUItem5=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Equipamiento
-MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_Stadistics
-MRUItem8=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
-MRUItem9=/Game/ThirdPerson/Input/IMC_Default
-MRUItem10=/Game/ThirdPerson/Input/Actions/IA_recoger
-MRUItem11=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Eqipamiento
-MRUItem12=/Game/ThirdPerson/Blueprints/Equipamiento/BP_Weapon
-MRUItem13=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP
-MRUItem14=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP_Straps_lp
-MRUItem15=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP_Greatsword_lp
-MRUItem16=/Game/ThirdPerson/Blueprints/Equipamiento/Inventario
-MRUItem17=/Game/ThirdPerson/Blueprints/Equipamiento/E_TiposArmas
-MRUItem18=/Game/AI_Advanced/Boss/BP_Contoller_BOSS
-MRUItem19=/Game/AI_Advanced/BP_Contoller
+MRUItem0=/Game/ThirdPerson/Blueprints/Equipamiento/UI_equipment/Equipment_UI
+MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem2=/Game/ThirdPerson/Maps/Main
+MRUItem3=/Game/ThirdPerson/Maps/Level_Tester
+MRUItem4=/Game/ThirdPerson/Blueprints/Equipamiento/Equimamiento
+MRUItem5=/Game/ThirdPerson/Blueprints/Equipamiento/DataBase_Armas
+MRUItem6=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Equipamiento
+MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem9=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
+MRUItem10=/Game/ThirdPerson/Input/IMC_Default
+MRUItem11=/Game/ThirdPerson/Input/Actions/IA_recoger
+MRUItem12=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Eqipamiento
+MRUItem13=/Game/ThirdPerson/Blueprints/Equipamiento/BP_Weapon
+MRUItem14=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP
+MRUItem15=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP_Straps_lp
+MRUItem16=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP_Greatsword_lp
+MRUItem17=/Game/ThirdPerson/Blueprints/Equipamiento/Inventario
+MRUItem18=/Game/ThirdPerson/Blueprints/Equipamiento/E_TiposArmas
+MRUItem19=/Game/AI_Advanced/Boss/BP_Contoller_BOSS
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -3300,6 +3300,15 @@ NiagaraSystem.Scalability=True
 1_Candle_C.Events=True
 PointLightComponent.LOD=True
 WorldSettings.HLODSystem=True
+Image.Layout=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Accessibility=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" "
@@ -3597,8 +3606,8 @@ PaperTileMapComponent="\"Object\" "
 PaperTileMap="\"Object\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
-Widget="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Appearance.FillColorAndOpacity\" "
-Visual="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Appearance.FillColorAndOpacity\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Appearance.FillColorAndOpacity\" "
 UI_HuntForBlood_C="\"Object\" "
 UserWidget="\"Object\" "
@@ -3843,6 +3852,7 @@ DataTable="\"Object\" "
 BP_Weapon_C="\"Object.Default.IteamData\" \"Object.Default.IteamData.item_2_F002DDD6496F01FFB97EE2BD78F18123\" "
 BP_sistema_Eqipamiento_C="\"Object\" "
 BP_sistema_Equipamiento_C="\"Object\" "
+VerticalBox="\"Object\" "
 
 [MRU]
 MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -4227,6 +4237,7 @@ None=======
 /Game/ThirdPerson/Blueprints/Equipamiento/DataBase_Armas.DataBase_Armas=0
 /Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Equipamiento.BP_sistema_Equipamiento=0
 /Game/ThirdPerson/Blueprints/Equipamiento/BP_Weapon.BP_Weapon=0
+/Game/ThirdPerson/Blueprints/Equipamiento/UI_equipment/Equipment_UI.Equipment_UI=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -4636,7 +4647,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=237.600 Y=456.800
-WindowSize=X=1308.000 Y=748.000
+WindowSize=X=1311.200 Y=751.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
