--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -181,7 +181,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints/Equipamiento/UI_equipment
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints/Equipamiento/UI_equipment
+ContentBrowserDrawer.SelectedPaths=/Game/Models/Mansion
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1349,36 +1349,30 @@ SynthBenchmark.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Models/Mansion/MansionInterior_Escalera_Dark.MansionInterior_Escalera_Dark
-OpenAssetsAtExit=/Game/Models/Mansion/MansionInterior_Pared_Esc.MansionInterior_Pared_Esc
-OpenAssetsAtExit=/Game/Models/Props/Candelabro_Techo/Chand_Cube_004.Chand_Cube_004
-OpenAssetsAtExit=/Game/Megascans/3D_Assets/Modular_Marble_Railing_Kit_wk5odbadw/S_Modular_Marble_Railing_Kit_wk5odbadw_lod3_Var1.S_Modular_Marble_Railing_Kit_wk5odbadw_lod3_Var1
-OpenAssetsAtExit=/Game/Models/Mansion/MansionInterior_Suelo_MainUp.MansionInterior_Suelo_MainUp
-OpenAssetsAtExit=/Game/Models/Mansion/MansionInterior_Pared_MainUp.MansionInterior_Pared_MainUp
-OpenAssetsAtExit=/Game/Megascans/3D_Assets/Modular_Wooden_Wall_Kit_wcusdb0dw/S_Modular_Wooden_Wall_Kit_wcusdb0dw_lod3_Var3.S_Modular_Wooden_Wall_Kit_wcusdb0dw_lod3_Var3
+OpenAssetsAtExit=/Game/Models/Mansion/MansionInterior_Pared_Down.MansionInterior_Pared_Down
+OpenAssetsAtExit=/Game/Models/Mansion/MansionInterior_Detalle_ParedDown.MansionInterior_Detalle_ParedDown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Megascans/3D_Assets/Modular_Wooden_Wall_Kit_wcusdb0dw/S_Modular_Wooden_Wall_Kit_wcusdb0dw_lod3_Var3
-MRUItem1=/Game/Models/Mansion/MansionInterior_Pared_MainUp
-MRUItem2=/Game/Megascans/3D_Assets/Modular_Marble_Railing_Kit_wk5odbadw/S_Modular_Marble_Railing_Kit_wk5odbadw_lod3_Var1
-MRUItem3=/Game/Models/Mansion/MansionInterior_Suelo_MainUp
-MRUItem4=/Game/Models/Props/Candelabro_Techo/Chand_Cylinder_007
-MRUItem5=/Game/Models/Props/Candelabro_Techo/Chand_Cube_004
-MRUItem6=/Game/Models/Mansion/MansionInterior_Pared_Esc
-MRUItem7=/Game/Models/Mansion/MansionInterior_Escalera_Dark
-MRUItem8=/Game/Models/Props/Candelabro/candelabro01/1_Candle
-MRUItem9=/Game/Models/Mansion/MansionInterior_Detalle_ParedDown
-MRUItem10=/Game/Models/Mansion/MansionInterior_Pared_Down
-MRUItem11=/Game/ThirdPerson/Maps/Main
-MRUItem12=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem13=/Game/ThirdPerson/Blueprints/Equipamiento/Inventario
-MRUItem14=/Game/ThirdPerson/Blueprints/Equipamiento/Equimamiento
-MRUItem15=/Game/ThirdPerson/Blueprints/Equipamiento/BP_Weapon
-MRUItem16=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Equipamiento
-MRUItem17=/Game/ThirdPerson/Blueprints/Equipamiento/UI_equipment/General_Item_Slot
-MRUItem18=/Game/ThirdPerson/Blueprints/Equipamiento/UI_equipment/Equipment_UI
-MRUItem19=/Game/ThirdPerson/Blueprints/Equipamiento/UI_equipment/Slots_Widget
+MRUItem0=/Game/Models/Mansion/MansionInterior_Detalle_ParedDown
+MRUItem1=/Game/Megascans/3D_Assets/Fireplace_ujdjcjxga/S_Fireplace_ujdjcjxga_lod3_Var1
+MRUItem2=/Game/Models/Props/Escritorio/escritorio
+MRUItem3=/Game/Models/Marco_r/marco_r
+MRUItem4=/Game/Models/Props/Ventana_L/ventana_L_Ventana_L
+MRUItem5=/Game/Models/Mansion/MansionInterior_Pared_Down
+MRUItem6=/Game/Models/Mansion/MansionInterior_Detalle_Pared_ZL
+MRUItem7=/Game/Models/Mansion/MansionInterior_Detalle_Pared_Vamp
+MRUItem8=/Game/Models/Mansion/MansionInterior_Detalle_Pared_MainUp
+MRUItem9=/Game/Models/Mansion/MansionInterior_cristal_L
+MRUItem10=/Game/Models/Mansion/MansionInterior_cristal_M
+MRUItem11=/Game/Models/Mansion/MansionInterior_cristal_S
+MRUItem12=/Game/Models/Mansion/MansionInterior_Detalle_Techo_Down
+MRUItem13=/Game/Models/Mansion/MansionInterior_Detalle_Techo_Vamp
+MRUItem14=/Game/Models/Mansion/MansionInterior_Escalera_Dark
+MRUItem15=/Game/Models/Mansion/MansionInterior_Escalera
+MRUItem16=/Game/ThirdPerson/Maps/Main
+MRUItem17=/Game/Megascans/3D_Assets/Modular_Wooden_Wall_Kit_wcusdb0dw/S_Modular_Wooden_Wall_Kit_wcusdb0dw_lod3_Var3
+MRUItem18=/Game/Models/Mansion/MansionInterior_Pared_MainUp
+MRUItem19=/Game/Megascans/3D_Assets/Modular_Marble_Railing_Kit_wk5odbadw/S_Modular_Marble_Railing_Kit_wk5odbadw_lod3_Var1
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -3602,7 +3596,7 @@ BP_sistema_Equipamiento_C.Activation=True
 BP_sistema_Equipamiento_C.Cooking=True
 BP_sistema_Equipamiento_C.Events=True
 DataAsset="\"Object\" "
-Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[27]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
@@ -3744,7 +3738,7 @@ AnimGraphNode_AssetPlayerBase="\"Object\" "
 AnimGraphNode_Base="\"Object\" "
 SkeletalMesh="\"Object\" "
 SkinnedAsset="\"Object\" "
-StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[27]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
 LODInfoUILayout="\"Object\" "
 AnimGraphNode_Slot="\"Object\" "
 FbxImportUI="\"Object\" \"Object.Animation.AnimSequenceImportData.Object.Transform.ImportRotation\" "
@@ -3852,7 +3846,7 @@ MaterialInterface="\"Object\" "
 Actor="\"Object\" "
 InterchangeGenericAssetsPipeline="\"Object\" "
 InterchangePipelineBase="\"Object\" "
-StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
+StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[27]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
 BP_TankEnemySpawn_C="\"Object\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 BCP_AttackSystem_C="\"Object\" "
 NewBlueprint_C="\"Object\" "
@@ -4441,6 +4435,18 @@ None=======
 /Game/Models/Mansion/MansionInterior_Suelo_MainUp.MansionInterior_Suelo_MainUp=0
 /Game/Models/Mansion/MansionInterior_Pared_MainUp.MansionInterior_Pared_MainUp=0
 /Game/Megascans/3D_Assets/Modular_Wooden_Wall_Kit_wcusdb0dw/S_Modular_Wooden_Wall_Kit_wcusdb0dw_lod3_Var3.S_Modular_Wooden_Wall_Kit_wcusdb0dw_lod3_Var3=0
+/Game/Models/Mansion/MansionInterior_Escalera.MansionInterior_Escalera=1
+/Game/Models/Mansion/MansionInterior_Detalle_Techo_Vamp.MansionInterior_Detalle_Techo_Vamp=1
+/Game/Models/Mansion/MansionInterior_Detalle_Techo_Down.MansionInterior_Detalle_Techo_Down=1
+/Game/Models/Mansion/MansionInterior_Detalle_Pared_MainUp.MansionInterior_Detalle_Pared_MainUp=1
+/Game/Models/Mansion/MansionInterior_cristal_S.MansionInterior_cristal_S=1
+/Game/Models/Mansion/MansionInterior_cristal_L.MansionInterior_cristal_L=1
+/Game/Models/Mansion/MansionInterior_cristal_M.MansionInterior_cristal_M=0
+/Game/Models/Mansion/MansionInterior_Detalle_Pared_Vamp.MansionInterior_Detalle_Pared_Vamp=1
+/Game/Models/Mansion/MansionInterior_Detalle_Pared_ZL.MansionInterior_Detalle_Pared_ZL=1
+/Game/Models/Props/Ventana_L/ventana_L_Ventana_L.ventana_L_Ventana_L=1
+/Game/Models/Props/Escritorio/escritorio.escritorio=1
+/Game/Megascans/3D_Assets/Fireplace_ujdjcjxga/S_Fireplace_ujdjcjxga_lod3_Var1.S_Fireplace_ujdjcjxga_lod3_Var1=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -4852,7 +4858,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 ScreenPosition=X=237.600 Y=456.800
 ScreenPosition=X=236.800 Y=456.000
 WindowSize=X=1312.800 Y=752.800
-WindowSize=X=1316.800 Y=756.800
+WindowSize=X=1318.400 Y=758.400
 None=======
 InitiallyMaximized=True
 
