--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -61,7 +61,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=-9,Y=-9)
+NewWindowPosition=(X=1242,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -90,15 +90,15 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1923,Y=989)
+LastSize=(X=704,Y=980)
 LastExecutedLaunchDevice=Windows@DESKTOP-7NLLS83
 LastExecutedLaunchName=DESKTOP-7NLLS83
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1923
-NewWindowHeight=989
-MultipleInstancePositions=(X=-9,Y=-9)
+NewWindowWidth=704
+NewWindowHeight=980
+MultipleInstancePositions=(X=1242,Y=0)
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1359,14 +1359,14 @@ OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_3.Inter
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_2.Interactuable_2
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_3
-MRUItem1=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_2
-MRUItem2=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba
-MRUItem3=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable
-MRUItem4=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion
-MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem6=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Equipamiento
-MRUItem7=/Game/ThirdPerson/Blueprints/Equipamiento/BP_Weapon
+MRUItem0=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_2
+MRUItem1=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_3
+MRUItem2=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable
+MRUItem3=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem5=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Equipamiento
+MRUItem6=/Game/ThirdPerson/Blueprints/Equipamiento/BP_Weapon
+MRUItem7=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba
 MRUItem8=/Game/ThirdPerson/Blueprints/Equipamiento/UI_Boton_Interactuar
 MRUItem9=/Game/Chekpoint/Chekpoint
 MRUItem10=/Game/ThirdPerson/Input/IMC_Default
@@ -4272,7 +4272,7 @@ MaterialEditorSettings="\"Object\" "
 Interactuable_C="\"Object\" "
 UI_Boton_Interactuar_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Interactuable_2_C="\"Object\" "
-Interactuable_3_C="\"Object.Actor.Tags\" "
+Interactuable_3_C=
 SplineMeshComponent="\"Object\" "
 K2Node_MakeStruct="\"Object\" "
 K2Node_StructMemberSet="\"Object\" "
@@ -4348,7 +4348,7 @@ SceneComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrappe
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PostProcessVolume.Lens.Lens,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens
 BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
-BP_ThirdPersonCharacter_C=
+BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
 SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
@@ -5198,7 +5198,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 ScreenPosition=X=237.600 Y=456.800
 ScreenPosition=X=100.000 Y=20.000
 WindowSize=X=1312.800 Y=752.800
-WindowSize=X=1332.800 Y=772.800
+WindowSize=X=1334.400 Y=774.400
 None=======
 InitiallyMaximized=True
 
