--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -90,13 +90,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=704,Y=980)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@DESKTOP-7NLLS83
 LastExecutedLaunchName=DESKTOP-7NLLS83
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=704
+NewWindowWidth=706
 NewWindowHeight=980
 MultipleInstancePositions=(X=1242,Y=0)
 
@@ -1348,30 +1348,30 @@ SynthBenchmark.TimeStamp=2024.01.08-18.19.03
 SynthBenchmark.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba.PuzlePrueba
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/BP_Weapon.BP_Weapon
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Equipamiento.BP_sistema_Equipamiento
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion.Zona_Colocacion
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable.Interactuable
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_3.Interactuable_3
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_2.Interactuable_2
+OpenAssetsAtExit=/Game/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny
+OpenAssetsAtExit=/Game/Characters/Mannequins/Meshes/SK_Mannequin.SK_Mannequin
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_2
-MRUItem1=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_3
-MRUItem2=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable
-MRUItem3=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem5=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Equipamiento
-MRUItem6=/Game/ThirdPerson/Blueprints/Equipamiento/BP_Weapon
-MRUItem7=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba
-MRUItem8=/Game/ThirdPerson/Blueprints/Equipamiento/UI_Boton_Interactuar
-MRUItem9=/Game/Chekpoint/Chekpoint
-MRUItem10=/Game/ThirdPerson/Input/IMC_Default
-MRUItem11=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem12=/Game/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem0=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_3
+MRUItem1=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem2=/Game/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem3=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_2
+MRUItem4=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable
+MRUItem5=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem7=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Equipamiento
+MRUItem8=/Game/ThirdPerson/Blueprints/Equipamiento/BP_Weapon
+MRUItem9=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba
+MRUItem10=/Game/ThirdPerson/Blueprints/Equipamiento/UI_Boton_Interactuar
+MRUItem11=/Game/Chekpoint/Chekpoint
+MRUItem12=/Game/ThirdPerson/Input/IMC_Default
 MRUItem13=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
 MRUItem14=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
 MRUItem15=/Game/Characters/Mannequins/Meshes/SKM_Manny_Simple
@@ -3710,7 +3710,7 @@ Interactuable_3_C.DataLayers=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" "
-PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
+PreviewMeshCollection="\"Object\" "
 None=======
 None=======
 None=======
@@ -4269,10 +4269,10 @@ CameraComponent="\"Object\" "
 BP_RangedEnemySpawn_C="\"Object\" "
 EditorSkeletonNotifyObj="\"Object\" "
 MaterialEditorSettings="\"Object\" "
-Interactuable_C="\"Object\" "
+Interactuable_C="\"Object\" \"Object.Actor.Tags\" "
 UI_Boton_Interactuar_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Interactuable_2_C="\"Object\" "
-Interactuable_3_C=
+Interactuable_2_C="\"Object\" \"Object.Actor.Tags\" "
+Interactuable_3_C="\"Object\" \"Object.Actor.Tags\" "
 SplineMeshComponent="\"Object\" "
 K2Node_MakeStruct="\"Object\" "
 K2Node_StructMemberSet="\"Object\" "
@@ -4354,7 +4354,7 @@ SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWr
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 UI_HuntForBlood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
@@ -4564,14 +4564,14 @@ BlockingVolume=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrappe
 CameraComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BP_ThirdPersonCharacter_C.PostProcess.Lens
 BP_RangedEnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 PersonaPreviewSceneDescription=AssetViewerSettings.Settings.Environment
-PreviewMeshCollection=
+PreviewMeshCollection=AssetViewerSettings.Settings.Environment
 BP_Contoller_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 Interactuable_C=
 Pawn=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 BoxComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
 K2Node_Composite=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
 Interactuable_3_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
-Interactuable_2_C=
+Interactuable_2_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
 K2Node_Tunnel=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
 Zona_Colocacion_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,Interactuable_C.TransformCommon.Transform
 SphereComponent=SphereComponent.Collision.Collision
@@ -4838,10 +4838,10 @@ GraphEditorQuickJumps=()
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion.Zona_Colocacion;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_3.Interactuable_3;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_2.Interactuable_2;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba.PuzlePrueba;
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion.Zona_Colocacion;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable.Interactuable;
 RecentlyPlaced=/Game/ThirdPerson/Equipment/Greatsword.Greatsword;
 RecentlyPlaced=/Game/AI_Advanced/BP_RangedEnemySpawn.BP_RangedEnemySpawn;
