--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1348,7 +1348,7 @@ SynthBenchmark.TimeStamp=2024.01.08-18.19.03
 SynthBenchmark.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba.PuzlePrueba
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/BP_Weapon.BP_Weapon
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Equipamiento.BP_sistema_Equipamiento
@@ -3710,7 +3710,7 @@ Interactuable_3_C.DataLayers=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" "
-PreviewMeshCollection="\"Object\" "
+PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 None=======
 None=======
 None=======
@@ -3850,7 +3850,7 @@ BP_sistema_Equipamiento_C.ComponentReplication=True
 BP_sistema_Equipamiento_C.Activation=True
 BP_sistema_Equipamiento_C.Cooking=True
 BP_sistema_Equipamiento_C.Events=True
-DataAsset="\"Object\" "
+DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 Object="\"Object\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
@@ -4354,7 +4354,7 @@ SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWr
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 UI_HuntForBlood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
@@ -4496,7 +4496,7 @@ ActorComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_Variabl
 SkeletalMesh=SkeletalMesh.LOD0.SkeletalMeshSectionListNameLOD_0,SkeletalMesh.LOD0.SkeletalMeshOptimizationSettings,SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.File Path
 SkeletalMesh=SkeletalMesh.LOD0.SkeletalMeshSectionListNameLOD_0,SkeletalMesh.LOD0.SkeletalMeshOptimizationSettings,SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.File Path
 LODInfoUILayout=
-LODInfoUILayout=SkeletalMesh.LOD0.SkeletalMeshSectionListNameLOD_0,SkeletalMesh.LOD0.SkeletalMeshOptimizationSettings,SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.File Path
+LODInfoUILayout=
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Sprint.IA_Sprint
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Equipment_menu.IA_Equipment_menu,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Interact.IA_Interact
 InputAction=
@@ -4564,7 +4564,7 @@ BlockingVolume=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrappe
 CameraComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BP_ThirdPersonCharacter_C.PostProcess.Lens
 BP_RangedEnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 PersonaPreviewSceneDescription=AssetViewerSettings.Settings.Environment
-PreviewMeshCollection=AssetViewerSettings.Settings.Environment
+PreviewMeshCollection=
 BP_Contoller_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 Interactuable_C=
 Pawn=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
@@ -5198,7 +5198,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 ScreenPosition=X=237.600 Y=456.800
 ScreenPosition=X=100.000 Y=20.000
 WindowSize=X=1312.800 Y=752.800
-WindowSize=X=1334.400 Y=774.400
+WindowSize=X=1336.000 Y=776.000
 None=======
 InitiallyMaximized=True
 
