--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -84,7 +84,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="CambioPrimeraPersona",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 +ActionMappings=(ActionName="Equipar",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="Grab",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=M)
-+ActionMappings=(ActionName="Mover_Espejo",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Move_Mirror",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
