falto esto de lo anteriro

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1354,7 +1354,7 @@ GeometryProcessingInterfaces.TimeStamp=2023.10.07-13.12.55
 GeometryProcessingInterfaces.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 None=======
 OpenAssetsAtExit=/Game/AI_Advanced/Objects/Interruptor.Interruptor
 
@@ -4733,7 +4733,7 @@ K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWr
 WidgetComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,WidgetComponent.Physics.ConstraintsGroup
 Widget=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 BP_TankEnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
-StaticMeshActor=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableSet.DefaultValueCategory.Out Actors,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,Interactuable_C.TransformCommon.Transform,NiagaraActor.TransformCommon.Transform,NiagaraComponent.NiagaraComponent_Parameters.Curve for Vector2D's
+StaticMeshActor=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableSet.DefaultValueCategory.Out Actors,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,Interactuable_C.TransformCommon.Transform,Interruptor_C.TransformCommon.Transform,NiagaraActor.TransformCommon.Transform,NiagaraComponent.NiagaraComponent_Parameters.Curve for Vector2D's
 Chekpoint_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 K2Node=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,Interactuable_C.TransformCommon.Transform
 BP_SpeedEnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
@@ -5671,7 +5671,7 @@ bAlwaysBuildUAT=True
 SCSViewportCameraSpeed=4
 bShowSelectionSubcomponents=True
 AssetViewerProfileName=
-PreviewFeatureLevel=4
+PreviewFeatureLevel=3
 PreviewPlatformName=None
 PreviewShaderFormatName=None
 PreviewShaderPlatformName=None
@@ -5767,8 +5767,8 @@ Project=B:/UE_5.2/
 
 [Python]
 LastDirectory=
-RecentsFiles=B:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=B:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [WidgetTemplatesExpanded]
 Audio=False
