--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -228,7 +228,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-Hunt_for_blood.TimeStamp=2024.03.19-13.36.33
+Hunt_for_blood.TimeStamp=2024.04.02-12.48.03
 Hunt_for_blood.LastCompileMethod=External
 StorageServerClient.TimeStamp=2024.01.08-18.19.03
 StorageServerClient.LastCompileMethod=External
@@ -1357,13 +1357,11 @@ GeometryProcessingInterfaces.LastCompileMethod=Unknown
 CleanShutdown=True
 None=======
 OpenAssetsAtExit=/Game/AI_Advanced/Objects/Interruptor.Interruptor
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba.PuzlePrueba
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba
-MRUItem2=/Game/AI_Advanced/Objects/Interruptor
+MRUItem0=/Game/AI_Advanced/Objects/Interruptor
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba
 MRUItem3=/Game/Sequence
 MRUItem4=/Game/AI_Advanced/Objects/Objeto_Interactuable
 MRUItem5=/Game/AI_Advanced/Objects/Mirror/Objeto_Interactuable
@@ -3965,6 +3963,9 @@ Interruptor_C.Networking=True
 Interruptor_C.Cooking=True
 Interruptor_C.DataLayers=True
 LevelSequenceActor.Actor=True
+Interruptor_C.No Use at the moment variables=True
+Interruptor_C.BooLean Of Confirmation=True
+Interruptor_C.Secuencia_Con_Bool=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" "
@@ -4552,7 +4553,7 @@ CameraComponent="\"Object\" "
 BP_RangedEnemySpawn_C="\"Object\" "
 EditorSkeletonNotifyObj="\"Object\" "
 MaterialEditorSettings="\"Object\" "
-Interactuable_C="\"Object\" \"Object.Actor.Tags\" "
+Interactuable_C="\"Object\" "
 UI_Boton_Interactuar_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Interactuable_2_C="\"Object\" \"Object.Actor.Tags\" "
 Interactuable_3_C="\"Object\" \"Object.Actor.Tags\" "
@@ -5034,7 +5035,7 @@ BP_RangedEnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,Propert
 PersonaPreviewSceneDescription=AssetViewerSettings.Settings.Environment
 PreviewMeshCollection=
 BP_Contoller_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
-Interactuable_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableSet.DefaultValueCategory.Out Actors,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,Interactuable_C.TransformCommon.Transform,Interactuable_3_C.TransformCommon.Transform,Interruptor_C.TransformCommon.Transform,NiagaraActor.TransformCommon.Transform,NiagaraComponent.NiagaraComponent_Parameters.Curve for Vector2D's
+Interactuable_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableSet.DefaultValueCategory.Out Actors,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,Interactuable_C.TransformCommon.Transform,Interactuable_3_C.TransformCommon.Transform,Interruptor_C.TransformCommon.Transform,NiagaraActor.TransformCommon.Transform,NiagaraComponent.NiagaraComponent_Parameters.Curve for Vector2D's,CameraComponent.PostProcess.Lens
 Pawn=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 BoxComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,Interactuable_C.TransformCommon.Transform,NiagaraComponent.NiagaraComponent_Parameters.Curve for Vector2D's
 K2Node_Composite=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.FollowCamera,K2Node_VariableGet.DefaultValueCategory.Rendering Features,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.PostProcess.Lens,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,BoxComponent.TransformCommon.Transform,Interactuable_C.TransformCommon.Transform
