como estaba antes

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -98,7 +98,7 @@ LastExecutedLaunchName=DESKTOP-7NLLS83
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=836
+NewWindowWidth=840
 NewWindowHeight=980
 MultipleInstancePositions=(X=1377,Y=0)
 
@@ -1359,31 +1359,28 @@ GeometryProcessingInterfaces.LastCompileMethod=Unknown
 CleanShutdown=True
 None=======
 None=======
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_3.Zona_Colocacion_3
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable.Interactuable
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion.Zona_Colocacion
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_3.Interactuable_3
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Expulsion.Zona_Expulsion
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_2.Zona_Colocacion_2
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_2.Interactuable_2
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba.PuzlePrueba
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_3.Zona_Colocacion_3
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable.Interactuable
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_3.Interactuable_3
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba
-MRUItem1=/Game/ThirdPerson/Blueprints/Equipamiento/Llave
-MRUItem2=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_2
-MRUItem3=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_2
-MRUItem4=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Expulsion
-MRUItem5=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_3
-MRUItem6=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion
-MRUItem7=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable
-MRUItem8=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_3
-MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem10=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem11=/Game/ThirdPerson/Blueprints/Equipamiento/Engranage
-MRUItem12=/Game/ThirdPerson/Blueprints/BP_Stadistics
-MRUItem13=/Game/ThirdPerson/Blueprints/Equipamiento/Colocar_Zona
+MRUItem0=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_3
+MRUItem1=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem3=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_3
+MRUItem4=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_2
+MRUItem5=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Expulsion
+MRUItem6=/Game/ThirdPerson/Blueprints/Equipamiento/Colocar_Zona
+MRUItem7=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba
+MRUItem8=/Game/ThirdPerson/Blueprints/Equipamiento/Llave
+MRUItem9=/Game/ThirdPerson/Blueprints/Equipamiento/Interactuable_2
+MRUItem10=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion
+MRUItem11=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem12=/Game/ThirdPerson/Blueprints/Equipamiento/Engranage
+MRUItem13=/Game/ThirdPerson/Blueprints/BP_Stadistics
 MRUItem14=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Equipamiento
 MRUItem15=/Game/AI_Advanced/Objects/Mirror/Beam
 MRUItem16=/Game/AI_Advanced/Objects/Mirror/Beam_Light
@@ -3982,6 +3979,8 @@ Zona_Expulsion_C.Tick=True
 Zona_Expulsion_C.Events=True
 Llave_3_C.Tick=True
 Llave_3_C.Events=True
+Zona_Colocacion_2_C.Default=True
+Zona_Colocacion_3_C.Default=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" "
@@ -5761,14 +5760,14 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 [RootWindow]
 ScreenPosition=X=237.600 Y=456.800
 ScreenPosition=X=272.000 Y=65.000
-ScreenPosition=X=-20.800 Y=46.400
+ScreenPosition=X=86.400 Y=6.400
 WindowSize=X=1312.800 Y=752.800
 WindowSize=X=1336.000 Y=714.000
 WindowSize=X=1341.000 Y=781.000
 WindowSize=X=1312.800 Y=752.800
 WindowSize=X=1350.000 Y=790.000
 WindowSize=X=1356.000 Y=796.000
-WindowSize=X=1356.000 Y=796.000
+WindowSize=X=1357.600 Y=797.600
 None=======
 None=======
 None=======
